Commit erros de ortografia no slider

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="img-products/produtos.jpg" alt="Produtos">
                         <div class="carousel-caption d-md-block">
-                            <h5>Produtos de qualidade?</h5>
-                            <a type="button" class="btn btn-dark" href="#product-area">De Uma olhada</a>
+                            <h5>Produtos de alta qualidade</h5>
+                            <a type="button" class="btn btn-dark" href="#product-area">Dê uma olhada</a>
                         </div>
                     </div>
                     <div class="carousel-item">
