--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="carousel-item">
                         <img class="d-block w-100" src="img-traffy/quemSomos.jpg" alt="Quem Somos">
                         <div class="carousel-caption d-md-block">
-                            <h5>Quem Somos?</h5>
+                            <h5>Quem somos</h5>
                             <a type="button" class="btn btn-dark" href="#about-area">Saiba Mais!!</a>
                         </div>
                     </div>
@@ -349,6 +349,7 @@
                             <h4>Formas de contato</h4>
                             <p class="secondary-color">(19) 9999-9999</p>
                             <p class="secondary-color">contato@Traffy.com </p>
+                            <p class="secondary-color">Avenida Presidente Altino 2266,Jaguaré Cep:05323-902</p>
                         </div>
                         <div class="col-12 col-md-4" id="links-container">
                             <div class="row font-1">
